--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -12003,19 +12003,19 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("https://images.unsplash.com/photo-1546604306-52e655c109b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=325&q=80");
   background-position: center;
   background-size: cover;
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("https://images.unsplash.com/photo-1600109457619-088360f46dbd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80");
   background-position: center;
   background-size: cover;
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("https://images.unsplash.com/photo-1601972599748-19fe5a7e756f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=701&q=80");
   background-position: center;
   background-size: cover;
 }
@@ -12128,173 +12128,173 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim {
   0% {
-    clip: rect(16px, 9999px, 19px, 0);
+    clip: rect(6px, 9999px, 62px, 0);
   }
 
   5% {
-    clip: rect(70px, 9999px, 99px, 0);
+    clip: rect(25px, 9999px, 56px, 0);
   }
 
   10% {
-    clip: rect(32px, 9999px, 54px, 0);
+    clip: rect(26px, 9999px, 27px, 0);
   }
 
   15% {
-    clip: rect(13px, 9999px, 28px, 0);
+    clip: rect(45px, 9999px, 74px, 0);
   }
 
   20% {
-    clip: rect(17px, 9999px, 21px, 0);
+    clip: rect(39px, 9999px, 67px, 0);
   }
 
   25% {
-    clip: rect(77px, 9999px, 25px, 0);
+    clip: rect(27px, 9999px, 78px, 0);
   }
 
   30% {
-    clip: rect(67px, 9999px, 60px, 0);
+    clip: rect(92px, 9999px, 55px, 0);
   }
 
   35% {
-    clip: rect(57px, 9999px, 54px, 0);
+    clip: rect(3px, 9999px, 10px, 0);
   }
 
   40% {
-    clip: rect(89px, 9999px, 58px, 0);
+    clip: rect(15px, 9999px, 76px, 0);
   }
 
   45% {
-    clip: rect(23px, 9999px, 96px, 0);
+    clip: rect(66px, 9999px, 85px, 0);
   }
 
   50% {
-    clip: rect(38px, 9999px, 40px, 0);
+    clip: rect(36px, 9999px, 71px, 0);
   }
 
   55% {
-    clip: rect(66px, 9999px, 71px, 0);
+    clip: rect(15px, 9999px, 79px, 0);
   }
 
   60% {
-    clip: rect(61px, 9999px, 38px, 0);
+    clip: rect(74px, 9999px, 76px, 0);
   }
 
   65% {
-    clip: rect(26px, 9999px, 60px, 0);
+    clip: rect(29px, 9999px, 42px, 0);
   }
 
   70% {
-    clip: rect(66px, 9999px, 90px, 0);
+    clip: rect(90px, 9999px, 79px, 0);
   }
 
   75% {
-    clip: rect(95px, 9999px, 19px, 0);
+    clip: rect(48px, 9999px, 81px, 0);
   }
 
   80% {
-    clip: rect(57px, 9999px, 13px, 0);
+    clip: rect(88px, 9999px, 30px, 0);
   }
 
   85% {
-    clip: rect(75px, 9999px, 73px, 0);
+    clip: rect(91px, 9999px, 96px, 0);
   }
 
   90% {
-    clip: rect(52px, 9999px, 65px, 0);
+    clip: rect(10px, 9999px, 80px, 0);
   }
 
   95% {
-    clip: rect(89px, 9999px, 32px, 0);
+    clip: rect(63px, 9999px, 47px, 0);
   }
 
   100% {
-    clip: rect(62px, 9999px, 76px, 0);
+    clip: rect(97px, 9999px, 12px, 0);
   }
 }
 
 @keyframes noise-anim {
   0% {
-    clip: rect(16px, 9999px, 19px, 0);
+    clip: rect(6px, 9999px, 62px, 0);
   }
 
   5% {
-    clip: rect(70px, 9999px, 99px, 0);
+    clip: rect(25px, 9999px, 56px, 0);
   }
 
   10% {
-    clip: rect(32px, 9999px, 54px, 0);
+    clip: rect(26px, 9999px, 27px, 0);
   }
 
   15% {
-    clip: rect(13px, 9999px, 28px, 0);
+    clip: rect(45px, 9999px, 74px, 0);
   }
 
   20% {
-    clip: rect(17px, 9999px, 21px, 0);
+    clip: rect(39px, 9999px, 67px, 0);
   }
 
   25% {
-    clip: rect(77px, 9999px, 25px, 0);
+    clip: rect(27px, 9999px, 78px, 0);
   }
 
   30% {
-    clip: rect(67px, 9999px, 60px, 0);
+    clip: rect(92px, 9999px, 55px, 0);
   }
 
   35% {
-    clip: rect(57px, 9999px, 54px, 0);
+    clip: rect(3px, 9999px, 10px, 0);
   }
 
   40% {
-    clip: rect(89px, 9999px, 58px, 0);
+    clip: rect(15px, 9999px, 76px, 0);
   }
 
   45% {
-    clip: rect(23px, 9999px, 96px, 0);
+    clip: rect(66px, 9999px, 85px, 0);
   }
 
   50% {
-    clip: rect(38px, 9999px, 40px, 0);
+    clip: rect(36px, 9999px, 71px, 0);
   }
 
   55% {
-    clip: rect(66px, 9999px, 71px, 0);
+    clip: rect(15px, 9999px, 79px, 0);
   }
 
   60% {
-    clip: rect(61px, 9999px, 38px, 0);
+    clip: rect(74px, 9999px, 76px, 0);
   }
 
   65% {
-    clip: rect(26px, 9999px, 60px, 0);
+    clip: rect(29px, 9999px, 42px, 0);
   }
 
   70% {
-    clip: rect(66px, 9999px, 90px, 0);
+    clip: rect(90px, 9999px, 79px, 0);
   }
 
   75% {
-    clip: rect(95px, 9999px, 19px, 0);
+    clip: rect(48px, 9999px, 81px, 0);
   }
 
   80% {
-    clip: rect(57px, 9999px, 13px, 0);
+    clip: rect(88px, 9999px, 30px, 0);
   }
 
   85% {
-    clip: rect(75px, 9999px, 73px, 0);
+    clip: rect(91px, 9999px, 96px, 0);
   }
 
   90% {
-    clip: rect(52px, 9999px, 65px, 0);
+    clip: rect(10px, 9999px, 80px, 0);
   }
 
   95% {
-    clip: rect(89px, 9999px, 32px, 0);
+    clip: rect(63px, 9999px, 47px, 0);
   }
 
   100% {
-    clip: rect(62px, 9999px, 76px, 0);
+    clip: rect(97px, 9999px, 12px, 0);
   }
 }
 
@@ -12313,173 +12313,173 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim-2 {
   0% {
-    clip: rect(86px, 9999px, 59px, 0);
+    clip: rect(2px, 9999px, 52px, 0);
   }
 
   5% {
-    clip: rect(12px, 9999px, 9px, 0);
+    clip: rect(84px, 9999px, 98px, 0);
   }
 
   10% {
-    clip: rect(44px, 9999px, 54px, 0);
+    clip: rect(9px, 9999px, 23px, 0);
   }
 
   15% {
-    clip: rect(31px, 9999px, 66px, 0);
+    clip: rect(8px, 9999px, 86px, 0);
   }
 
   20% {
-    clip: rect(5px, 9999px, 8px, 0);
+    clip: rect(61px, 9999px, 5px, 0);
   }
 
   25% {
-    clip: rect(53px, 9999px, 92px, 0);
+    clip: rect(93px, 9999px, 29px, 0);
   }
 
   30% {
-    clip: rect(48px, 9999px, 68px, 0);
+    clip: rect(11px, 9999px, 88px, 0);
   }
 
   35% {
-    clip: rect(56px, 9999px, 83px, 0);
+    clip: rect(36px, 9999px, 11px, 0);
   }
 
   40% {
-    clip: rect(48px, 9999px, 84px, 0);
+    clip: rect(94px, 9999px, 80px, 0);
   }
 
   45% {
-    clip: rect(49px, 9999px, 33px, 0);
+    clip: rect(63px, 9999px, 4px, 0);
   }
 
   50% {
-    clip: rect(61px, 9999px, 8px, 0);
+    clip: rect(72px, 9999px, 81px, 0);
   }
 
   55% {
-    clip: rect(5px, 9999px, 98px, 0);
+    clip: rect(45px, 9999px, 77px, 0);
   }
 
   60% {
-    clip: rect(60px, 9999px, 29px, 0);
+    clip: rect(27px, 9999px, 68px, 0);
   }
 
   65% {
-    clip: rect(9px, 9999px, 38px, 0);
+    clip: rect(21px, 9999px, 91px, 0);
   }
 
   70% {
-    clip: rect(49px, 9999px, 48px, 0);
+    clip: rect(62px, 9999px, 65px, 0);
   }
 
   75% {
-    clip: rect(4px, 9999px, 3px, 0);
+    clip: rect(4px, 9999px, 73px, 0);
   }
 
   80% {
-    clip: rect(50px, 9999px, 84px, 0);
+    clip: rect(6px, 9999px, 50px, 0);
   }
 
   85% {
-    clip: rect(83px, 9999px, 83px, 0);
+    clip: rect(12px, 9999px, 30px, 0);
   }
 
   90% {
-    clip: rect(5px, 9999px, 69px, 0);
+    clip: rect(11px, 9999px, 50px, 0);
   }
 
   95% {
-    clip: rect(93px, 9999px, 64px, 0);
+    clip: rect(27px, 9999px, 26px, 0);
   }
 
   100% {
-    clip: rect(18px, 9999px, 47px, 0);
+    clip: rect(9px, 9999px, 77px, 0);
   }
 }
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(86px, 9999px, 59px, 0);
+    clip: rect(2px, 9999px, 52px, 0);
   }
 
   5% {
-    clip: rect(12px, 9999px, 9px, 0);
+    clip: rect(84px, 9999px, 98px, 0);
   }
 
   10% {
-    clip: rect(44px, 9999px, 54px, 0);
+    clip: rect(9px, 9999px, 23px, 0);
   }
 
   15% {
-    clip: rect(31px, 9999px, 66px, 0);
+    clip: rect(8px, 9999px, 86px, 0);
   }
 
   20% {
-    clip: rect(5px, 9999px, 8px, 0);
+    clip: rect(61px, 9999px, 5px, 0);
   }
 
   25% {
-    clip: rect(53px, 9999px, 92px, 0);
+    clip: rect(93px, 9999px, 29px, 0);
   }
 
   30% {
-    clip: rect(48px, 9999px, 68px, 0);
+    clip: rect(11px, 9999px, 88px, 0);
   }
 
   35% {
-    clip: rect(56px, 9999px, 83px, 0);
+    clip: rect(36px, 9999px, 11px, 0);
   }
 
   40% {
-    clip: rect(48px, 9999px, 84px, 0);
+    clip: rect(94px, 9999px, 80px, 0);
   }
 
   45% {
-    clip: rect(49px, 9999px, 33px, 0);
+    clip: rect(63px, 9999px, 4px, 0);
   }
 
   50% {
-    clip: rect(61px, 9999px, 8px, 0);
+    clip: rect(72px, 9999px, 81px, 0);
   }
 
   55% {
-    clip: rect(5px, 9999px, 98px, 0);
+    clip: rect(45px, 9999px, 77px, 0);
   }
 
   60% {
-    clip: rect(60px, 9999px, 29px, 0);
+    clip: rect(27px, 9999px, 68px, 0);
   }
 
   65% {
-    clip: rect(9px, 9999px, 38px, 0);
+    clip: rect(21px, 9999px, 91px, 0);
   }
 
   70% {
-    clip: rect(49px, 9999px, 48px, 0);
+    clip: rect(62px, 9999px, 65px, 0);
   }
 
   75% {
-    clip: rect(4px, 9999px, 3px, 0);
+    clip: rect(4px, 9999px, 73px, 0);
   }
 
   80% {
-    clip: rect(50px, 9999px, 84px, 0);
+    clip: rect(6px, 9999px, 50px, 0);
   }
 
   85% {
-    clip: rect(83px, 9999px, 83px, 0);
+    clip: rect(12px, 9999px, 30px, 0);
   }
 
   90% {
-    clip: rect(5px, 9999px, 69px, 0);
+    clip: rect(11px, 9999px, 50px, 0);
   }
 
   95% {
-    clip: rect(93px, 9999px, 64px, 0);
+    clip: rect(27px, 9999px, 26px, 0);
   }
 
   100% {
-    clip: rect(18px, 9999px, 47px, 0);
+    clip: rect(9px, 9999px, 77px, 0);
   }
 }
 
